// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Calendar > does not have navigation 1`] = `
<DocumentFragment>
  <div
    class="rdp-root p-3"
  >
    <div
      class="flex flex-col sm:flex-row space-y-4 sm:space-y-0 relative"
    >
      <nav
        aria-label=""
        class="absolute flex gap-2 items-center rtl:left-0 rtl:right-auto right-0 z-10"
      >
        <button
          aria-label="Go to the Previous Month"
          class="btn btn-outline min-h-fit border-neutral-content h-7 w-7 bg-transparent p-0 opacity-50 hover:opacity-100 [&:disabled]:text-opacity-50"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <svg
            class="lucide lucide-chevron-left h-4 w-4 rdp-chevron"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m15 18-6-6 6-6"
            />
          </svg>
        </button>
        <button
          aria-label="Go to the Next Month"
          class="btn btn-outline min-h-fit border-neutral-content h-7 w-7 bg-transparent p-0 opacity-50 hover:opacity-100 [&:disabled]:text-opacity-50"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <svg
            class="lucide lucide-chevron-right h-4 w-4 rdp-chevron"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m9 18 6-6-6-6"
            />
          </svg>
        </button>
      </nav>
      <div
        class="space-y-4"
      >
        <div
          class="flex justify-start pt-1 relative items-center"
        >
          <span
            aria-live="polite"
            class="text-sm font-medium"
            role="status"
          >
            April 2024
          </span>
        </div>
        <table
          aria-label="April 2024"
          aria-multiselectable="false"
          class="w-full border-collapse space-y-1"
          role="grid"
        >
          <thead>
            <tr
              class="flex"
            >
              <th
                aria-label="Sunday"
                class="rounded-md w-9 font-normal text-[0.8rem]"
                scope="col"
              >
                Su
              </th>
              <th
                aria-label="Monday"
                class="rounded-md w-9 font-normal text-[0.8rem]"
                scope="col"
              >
                Mo
              </th>
              <th
                aria-label="Tuesday"
                class="rounded-md w-9 font-normal text-[0.8rem]"
                scope="col"
              >
                Tu
              </th>
              <th
                aria-label="Wednesday"
                class="rounded-md w-9 font-normal text-[0.8rem]"
                scope="col"
              >
                We
              </th>
              <th
                aria-label="Thursday"
                class="rounded-md w-9 font-normal text-[0.8rem]"
                scope="col"
              >
                Th
              </th>
              <th
                aria-label="Friday"
                class="rounded-md w-9 font-normal text-[0.8rem]"
                scope="col"
              >
                Fr
              </th>
              <th
                aria-label="Saturday"
                class="rounded-md w-9 font-normal text-[0.8rem]"
                scope="col"
              >
                Sa
              </th>
            </tr>
          </thead>
          <tbody
            class="rdp-weeks"
          >
            <tr
              class="flex w-full mt-2"
            >
              <td
                aria-label="Sunday, March 31st, 2024"
                class="h-9 w-9 text-center flex items-center justify-center text-sm p-0 relative focus-within:relative focus-within:z-20 opacity-50"
                data-day="2024-03-31"
                data-month="2024-03"
                data-outside="true"
              >
                31
              </td>
              <td
                aria-label="Monday, April 1st, 2024"
                class="h-9 w-9 text-center flex items-center justify-center text-sm p-0 relative focus-within:relative focus-within:z-20"
                data-day="2024-04-01"
              >
                1
              </td>
              <td
                aria-label="Tuesday, April 2nd, 2024"
                class="h-9 w-9 text-center flex items-center justify-center text-sm p-0 relative focus-within:relative focus-within:z-20"
                data-day="2024-04-02"
              >
                2
              </td>
              <td
                aria-label="Wednesday, April 3rd, 2024"
                class="h-9 w-9 text-center flex items-center justify-center text-sm p-0 relative focus-within:relative focus-within:z-20"
                data-day="2024-04-03"
              >
                3
              </td>
              <td
                aria-label="Thursday, April 4th, 2024"
                class="h-9 w-9 text-center flex items-center justify-center text-sm p-0 relative focus-within:relative focus-within:z-20"
                data-day="2024-04-04"
              >
                4
              </td>
              <td
                aria-label="Friday, April 5th, 2024"
                class="h-9 w-9 text-center flex items-center justify-center text-sm p-0 relative focus-within:relative focus-within:z-20"
                data-day="2024-04-05"
              >
                5
              </td>
              <td
                aria-label="Saturday, April 6th, 2024"
                class="h-9 w-9 text-center flex items-center justify-center text-sm p-0 relative focus-within:relative focus-within:z-20"
                data-day="2024-04-06"
              >
                6
              </td>
            </tr>
            <tr
              class="flex w-full mt-2"
            >
              <td
                aria-label="Sunday, April 7th, 2024"
                class="h-9 w-9 text-center flex items-center justify-center text-sm p-0 relative focus-within:relative focus-within:z-20"
                data-day="2024-04-07"
              >
                7
              </td>
              <td
                aria-label="Monday, April 8th, 2024"
                class="h-9 w-9 text-center flex items-center justify-center text-sm p-0 relative focus-within:relative focus-within:z-20"
                data-day="2024-04-08"
              >
                8
              </td>
              <td
                aria-label="Tuesday, April 9th, 2024"
                class="h-9 w-9 text-center flex items-center justify-center text-sm p-0 relative focus-within:relative focus-within:z-20"
                data-day="2024-04-09"
              >
                9
              </td>
              <td
                aria-label="Wednesday, April 10th, 2024"
                class="h-9 w-9 text-center flex items-center justify-center text-sm p-0 relative focus-within:relative focus-within:z-20"
                data-day="2024-04-10"
              >
                10
              </td>
              <td
                aria-label="Thursday, April 11th, 2024"
                class="h-9 w-9 text-center flex items-center justify-center text-sm p-0 relative focus-within:relative focus-within:z-20"
                data-day="2024-04-11"
              >
                11
              </td>
              <td
                aria-label="Friday, April 12th, 2024"
                class="h-9 w-9 text-center flex items-center justify-center text-sm p-0 relative focus-within:relative focus-within:z-20"
                data-day="2024-04-12"
              >
                12
              </td>
              <td
                aria-label="Saturday, April 13th, 2024"
                class="h-9 w-9 text-center flex items-center justify-center text-sm p-0 relative focus-within:relative focus-within:z-20"
                data-day="2024-04-13"
              >
                13
              </td>
            </tr>
            <tr
              class="flex w-full mt-2"
            >
              <td
                aria-label="Sunday, April 14th, 2024"
                class="h-9 w-9 text-center flex items-center justify-center text-sm p-0 relative focus-within:relative focus-within:z-20"
                data-day="2024-04-14"
              >
                14
              </td>
              <td
                aria-label="Monday, April 15th, 2024"
                class="h-9 w-9 text-center flex items-center justify-center text-sm p-0 relative focus-within:relative focus-within:z-20"
                data-day="2024-04-15"
              >
                15
              </td>
              <td
                aria-label="Tuesday, April 16th, 2024"
                class="h-9 w-9 text-center flex items-center justify-center text-sm p-0 relative focus-within:relative focus-within:z-20"
                data-day="2024-04-16"
              >
                16
              </td>
              <td
                aria-label="Wednesday, April 17th, 2024"
                class="h-9 w-9 text-center flex items-center justify-center text-sm p-0 relative focus-within:relative focus-within:z-20"
                data-day="2024-04-17"
              >
                17
              </td>
              <td
                aria-label="Thursday, April 18th, 2024"
                class="h-9 w-9 text-center flex items-center justify-center text-sm p-0 relative focus-within:relative focus-within:z-20"
                data-day="2024-04-18"
              >
                18
              </td>
              <td
                aria-label="Today, Friday, April 19th, 2024"
                class="h-9 w-9 text-center flex items-center justify-center text-sm p-0 relative focus-within:relative focus-within:z-20 group/today [&:has(*)]:ring-0 ring-1 ring-accent ring-inset rounded-full"
                data-day="2024-04-19"
                data-today="true"
              >
                19
              </td>
              <td
                aria-label="Saturday, April 20th, 2024"
                class="h-9 w-9 text-center flex items-center justify-center text-sm p-0 relative focus-within:relative focus-within:z-20"
                data-day="2024-04-20"
              >
                20
              </td>
            </tr>
            <tr
              class="flex w-full mt-2"
            >
              <td
                aria-label="Sunday, April 21st, 2024"
                class="h-9 w-9 text-center flex items-center justify-center text-sm p-0 relative focus-within:relative focus-within:z-20"
                data-day="2024-04-21"
              >
                21
              </td>
              <td
                aria-label="Monday, April 22nd, 2024"
                class="h-9 w-9 text-center flex items-center justify-center text-sm p-0 relative focus-within:relative focus-within:z-20"
                data-day="2024-04-22"
              >
                22
              </td>
              <td
                aria-label="Tuesday, April 23rd, 2024"
                class="h-9 w-9 text-center flex items-center justify-center text-sm p-0 relative focus-within:relative focus-within:z-20"
                data-day="2024-04-23"
              >
                23
              </td>
              <td
                aria-label="Wednesday, April 24th, 2024"
                class="h-9 w-9 text-center flex items-center justify-center text-sm p-0 relative focus-within:relative focus-within:z-20"
                data-day="2024-04-24"
              >
                24
              </td>
              <td
                aria-label="Thursday, April 25th, 2024"
                class="h-9 w-9 text-center flex items-center justify-center text-sm p-0 relative focus-within:relative focus-within:z-20"
                data-day="2024-04-25"
              >
                25
              </td>
              <td
                aria-label="Friday, April 26th, 2024"
                class="h-9 w-9 text-center flex items-center justify-center text-sm p-0 relative focus-within:relative focus-within:z-20"
                data-day="2024-04-26"
              >
                26
              </td>
              <td
                aria-label="Saturday, April 27th, 2024"
                class="h-9 w-9 text-center flex items-center justify-center text-sm p-0 relative focus-within:relative focus-within:z-20"
                data-day="2024-04-27"
              >
                27
              </td>
            </tr>
            <tr
              class="flex w-full mt-2"
            >
              <td
                aria-label="Sunday, April 28th, 2024"
                class="h-9 w-9 text-center flex items-center justify-center text-sm p-0 relative focus-within:relative focus-within:z-20"
                data-day="2024-04-28"
              >
                28
              </td>
              <td
                aria-label="Monday, April 29th, 2024"
                class="h-9 w-9 text-center flex items-center justify-center text-sm p-0 relative focus-within:relative focus-within:z-20"
                data-day="2024-04-29"
              >
                29
              </td>
              <td
                aria-label="Tuesday, April 30th, 2024"
                class="h-9 w-9 text-center flex items-center justify-center text-sm p-0 relative focus-within:relative focus-within:z-20"
                data-day="2024-04-30"
              >
                30
              </td>
              <td
                aria-label="Wednesday, May 1st, 2024"
                class="h-9 w-9 text-center flex items-center justify-center text-sm p-0 relative focus-within:relative focus-within:z-20 opacity-50"
                data-day="2024-05-01"
                data-month="2024-05"
                data-outside="true"
              >
                1
              </td>
              <td
                aria-label="Thursday, May 2nd, 2024"
                class="h-9 w-9 text-center flex items-center justify-center text-sm p-0 relative focus-within:relative focus-within:z-20 opacity-50"
                data-day="2024-05-02"
                data-month="2024-05"
                data-outside="true"
              >
                2
              </td>
              <td
                aria-label="Friday, May 3rd, 2024"
                class="h-9 w-9 text-center flex items-center justify-center text-sm p-0 relative focus-within:relative focus-within:z-20 opacity-50"
                data-day="2024-05-03"
                data-month="2024-05"
                data-outside="true"
              >
                3
              </td>
              <td
                aria-label="Saturday, May 4th, 2024"
                class="h-9 w-9 text-center flex items-center justify-center text-sm p-0 relative focus-within:relative focus-within:z-20 opacity-50"
                data-day="2024-05-04"
                data-month="2024-05"
                data-outside="true"
              >
                4
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Calendar > has navigable months 1`] = `
<DocumentFragment>
  <div
    class="rdp-root p-3"
  >
    <div
      class="flex flex-col sm:flex-row space-y-4 sm:space-y-0 relative"
    >
      <nav
        aria-label=""
        class="absolute flex gap-2 items-center rtl:left-0 rtl:right-auto right-0 z-10"
      >
        <button
          aria-label="Go to the Previous Month"
          class="btn btn-outline min-h-fit border-neutral-content h-7 w-7 bg-transparent p-0 opacity-50 hover:opacity-100 [&:disabled]:text-opacity-50"
          type="button"
        >
          <svg
            class="lucide lucide-chevron-left h-4 w-4 rdp-chevron"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m15 18-6-6 6-6"
            />
          </svg>
        </button>
        <button
          aria-label="Go to the Next Month"
          class="btn btn-outline min-h-fit border-neutral-content h-7 w-7 bg-transparent p-0 opacity-50 hover:opacity-100 [&:disabled]:text-opacity-50"
          type="button"
        >
          <svg
            class="lucide lucide-chevron-right h-4 w-4 rdp-chevron"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m9 18 6-6-6-6"
            />
          </svg>
        </button>
      </nav>
      <div
        class="space-y-4"
      >
        <div
          class="flex justify-start pt-1 relative items-center"
        >
          <div
            class="flex justify-center items-center"
          >
            <span
              class="text-sm [&>[aria-hidden='true']]:hidden"
              data-disabled="false"
            >
              <select
                aria-label="Choose the Month"
                class="bg-transparent rdp-months_dropdown"
              >
                <option
                  value="0"
                >
                  January
                </option>
                <option
                  value="1"
                >
                  February
                </option>
                <option
                  value="2"
                >
                  March
                </option>
                <option
                  value="3"
                >
                  April
                </option>
                <option
                  value="4"
                >
                  May
                </option>
                <option
                  value="5"
                >
                  June
                </option>
                <option
                  value="6"
                >
                  July
                </option>
                <option
                  value="7"
                >
                  August
                </option>
                <option
                  value="8"
                >
                  September
                </option>
                <option
                  value="9"
                >
                  October
                </option>
                <option
                  value="10"
                >
                  November
                </option>
                <option
                  value="11"
                >
                  December
                </option>
              </select>
              <span
                aria-hidden="true"
                class="text-sm font-medium"
              >
                April
                <svg
                  class="lucide lucide-chevron-right h-4 w-4 rdp-chevron"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m9 18 6-6-6-6"
                  />
                </svg>
              </span>
            </span>
            <span
              class="text-sm [&>[aria-hidden='true']]:hidden"
              data-disabled="false"
            >
              <select
                aria-label="Choose the Year"
                class="bg-transparent rdp-years_dropdown"
              >
                <option
                  value="2022"
                >
                  2022
                </option>
                <option
                  value="2023"
                >
                  2023
                </option>
                <option
                  value="2024"
                >
                  2024
                </option>
                <option
                  value="2025"
                >
                  2025
                </option>
                <option
                  value="2026"
                >
                  2026
                </option>
              </select>
              <span
                aria-hidden="true"
                class="text-sm font-medium"
              >
                2024
                <svg
                  class="lucide lucide-chevron-right h-4 w-4 rdp-chevron"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m9 18 6-6-6-6"
                  />
                </svg>
              </span>
            </span>
          </div>
        </div>
        <table
          aria-label="April 2024"
          aria-multiselectable="false"
          class="w-full border-collapse space-y-1"
          role="grid"
        >
          <thead>
            <tr
              class="flex"
            >
              <th
                aria-label="Sunday"
                class="rounded-md w-9 font-normal text-[0.8rem]"
                scope="col"
              >
                Su
              </th>
              <th
                aria-label="Monday"
                class="rounded-md w-9 font-normal text-[0.8rem]"
                scope="col"
              >
                Mo
              </th>
              <th
                aria-label="Tuesday"
                class="rounded-md w-9 font-normal text-[0.8rem]"
                scope="col"
              >
                Tu
              </th>
              <th
                aria-label="Wednesday"
                class="rounded-md w-9 font-normal text-[0.8rem]"
                scope="col"
              >
                We
              </th>
              <th
                aria-label="Thursday"
                class="rounded-md w-9 font-normal text-[0.8rem]"
                scope="col"
              >
                Th
              </th>
              <th
                aria-label="Friday"
                class="rounded-md w-9 font-normal text-[0.8rem]"
                scope="col"
              >
                Fr
              </th>
              <th
                aria-label="Saturday"
                class="rounded-md w-9 font-normal text-[0.8rem]"
                scope="col"
              >
                Sa
              </th>
            </tr>
          </thead>
          <tbody
            class="rdp-weeks"
          >
            <tr
              class="flex w-full mt-2"
            >
              <td
                aria-label="Sunday, March 31st, 2024"
                class="h-9 w-9 text-center flex items-center justify-center text-sm p-0 relative focus-within:relative focus-within:z-20 opacity-50"
                data-day="2024-03-31"
                data-month="2024-03"
                data-outside="true"
              >
                31
              </td>
              <td
                aria-label="Monday, April 1st, 2024"
                class="h-9 w-9 text-center flex items-center justify-center text-sm p-0 relative focus-within:relative focus-within:z-20"
                data-day="2024-04-01"
              >
                1
              </td>
              <td
                aria-label="Tuesday, April 2nd, 2024"
                class="h-9 w-9 text-center flex items-center justify-center text-sm p-0 relative focus-within:relative focus-within:z-20"
                data-day="2024-04-02"
              >
                2
              </td>
              <td
                aria-label="Wednesday, April 3rd, 2024"
                class="h-9 w-9 text-center flex items-center justify-center text-sm p-0 relative focus-within:relative focus-within:z-20"
                data-day="2024-04-03"
              >
                3
              </td>
              <td
                aria-label="Thursday, April 4th, 2024"
                class="h-9 w-9 text-center flex items-center justify-center text-sm p-0 relative focus-within:relative focus-within:z-20"
                data-day="2024-04-04"
              >
                4
              </td>
              <td
                aria-label="Friday, April 5th, 2024"
                class="h-9 w-9 text-center flex items-center justify-center text-sm p-0 relative focus-within:relative focus-within:z-20"
                data-day="2024-04-05"
              >
                5
              </td>
              <td
                aria-label="Saturday, April 6th, 2024"
                class="h-9 w-9 text-center flex items-center justify-center text-sm p-0 relative focus-within:relative focus-within:z-20"
                data-day="2024-04-06"
              >
                6
              </td>
            </tr>
            <tr
              class="flex w-full mt-2"
            >
              <td
                aria-label="Sunday, April 7th, 2024"
                class="h-9 w-9 text-center flex items-center justify-center text-sm p-0 relative focus-within:relative focus-within:z-20"
                data-day="2024-04-07"
              >
                7
              </td>
              <td
                aria-label="Monday, April 8th, 2024"
                class="h-9 w-9 text-center flex items-center justify-center text-sm p-0 relative focus-within:relative focus-within:z-20"
                data-day="2024-04-08"
              >
                8
              </td>
              <td
                aria-label="Tuesday, April 9th, 2024"
                class="h-9 w-9 text-center flex items-center justify-center text-sm p-0 relative focus-within:relative focus-within:z-20"
                data-day="2024-04-09"
              >
                9
              </td>
              <td
                aria-label="Wednesday, April 10th, 2024"
                class="h-9 w-9 text-center flex items-center justify-center text-sm p-0 relative focus-within:relative focus-within:z-20"
                data-day="2024-04-10"
              >
                10
              </td>
              <td
                aria-label="Thursday, April 11th, 2024"
                class="h-9 w-9 text-center flex items-center justify-center text-sm p-0 relative focus-within:relative focus-within:z-20"
                data-day="2024-04-11"
              >
                11
              </td>
              <td
                aria-label="Friday, April 12th, 2024"
                class="h-9 w-9 text-center flex items-center justify-center text-sm p-0 relative focus-within:relative focus-within:z-20"
                data-day="2024-04-12"
              >
                12
              </td>
              <td
                aria-label="Saturday, April 13th, 2024"
                class="h-9 w-9 text-center flex items-center justify-center text-sm p-0 relative focus-within:relative focus-within:z-20"
                data-day="2024-04-13"
              >
                13
              </td>
            </tr>
            <tr
              class="flex w-full mt-2"
            >
              <td
                aria-label="Sunday, April 14th, 2024"
                class="h-9 w-9 text-center flex items-center justify-center text-sm p-0 relative focus-within:relative focus-within:z-20"
                data-day="2024-04-14"
              >
                14
              </td>
              <td
                aria-label="Monday, April 15th, 2024"
                class="h-9 w-9 text-center flex items-center justify-center text-sm p-0 relative focus-within:relative focus-within:z-20"
                data-day="2024-04-15"
              >
                15
              </td>
              <td
                aria-label="Tuesday, April 16th, 2024"
                class="h-9 w-9 text-center flex items-center justify-center text-sm p-0 relative focus-within:relative focus-within:z-20"
                data-day="2024-04-16"
              >
                16
              </td>
              <td
                aria-label="Wednesday, April 17th, 2024"
                class="h-9 w-9 text-center flex items-center justify-center text-sm p-0 relative focus-within:relative focus-within:z-20"
                data-day="2024-04-17"
              >
                17
              </td>
              <td
                aria-label="Thursday, April 18th, 2024"
                class="h-9 w-9 text-center flex items-center justify-center text-sm p-0 relative focus-within:relative focus-within:z-20"
                data-day="2024-04-18"
              >
                18
              </td>
              <td
                aria-label="Today, Friday, April 19th, 2024"
                class="h-9 w-9 text-center flex items-center justify-center text-sm p-0 relative focus-within:relative focus-within:z-20 group/today [&:has(*)]:ring-0 ring-1 ring-accent ring-inset rounded-full"
                data-day="2024-04-19"
                data-today="true"
              >
                19
              </td>
              <td
                aria-label="Saturday, April 20th, 2024"
                class="h-9 w-9 text-center flex items-center justify-center text-sm p-0 relative focus-within:relative focus-within:z-20"
                data-day="2024-04-20"
              >
                20
              </td>
            </tr>
            <tr
              class="flex w-full mt-2"
            >
              <td
                aria-label="Sunday, April 21st, 2024"
                class="h-9 w-9 text-center flex items-center justify-center text-sm p-0 relative focus-within:relative focus-within:z-20"
                data-day="2024-04-21"
              >
                21
              </td>
              <td
                aria-label="Monday, April 22nd, 2024"
                class="h-9 w-9 text-center flex items-center justify-center text-sm p-0 relative focus-within:relative focus-within:z-20"
                data-day="2024-04-22"
              >
                22
              </td>
              <td
                aria-label="Tuesday, April 23rd, 2024"
                class="h-9 w-9 text-center flex items-center justify-center text-sm p-0 relative focus-within:relative focus-within:z-20"
                data-day="2024-04-23"
              >
                23
              </td>
              <td
                aria-label="Wednesday, April 24th, 2024"
                class="h-9 w-9 text-center flex items-center justify-center text-sm p-0 relative focus-within:relative focus-within:z-20"
                data-day="2024-04-24"
              >
                24
              </td>
              <td
                aria-label="Thursday, April 25th, 2024"
                class="h-9 w-9 text-center flex items-center justify-center text-sm p-0 relative focus-within:relative focus-within:z-20"
                data-day="2024-04-25"
              >
                25
              </td>
              <td
                aria-label="Friday, April 26th, 2024"
                class="h-9 w-9 text-center flex items-center justify-center text-sm p-0 relative focus-within:relative focus-within:z-20"
                data-day="2024-04-26"
              >
                26
              </td>
              <td
                aria-label="Saturday, April 27th, 2024"
                class="h-9 w-9 text-center flex items-center justify-center text-sm p-0 relative focus-within:relative focus-within:z-20"
                data-day="2024-04-27"
              >
                27
              </td>
            </tr>
            <tr
              class="flex w-full mt-2"
            >
              <td
                aria-label="Sunday, April 28th, 2024"
                class="h-9 w-9 text-center flex items-center justify-center text-sm p-0 relative focus-within:relative focus-within:z-20"
                data-day="2024-04-28"
              >
                28
              </td>
              <td
                aria-label="Monday, April 29th, 2024"
                class="h-9 w-9 text-center flex items-center justify-center text-sm p-0 relative focus-within:relative focus-within:z-20"
                data-day="2024-04-29"
              >
                29
              </td>
              <td
                aria-label="Tuesday, April 30th, 2024"
                class="h-9 w-9 text-center flex items-center justify-center text-sm p-0 relative focus-within:relative focus-within:z-20"
                data-day="2024-04-30"
              >
                30
              </td>
              <td
                aria-label="Wednesday, May 1st, 2024"
                class="h-9 w-9 text-center flex items-center justify-center text-sm p-0 relative focus-within:relative focus-within:z-20 opacity-50"
                data-day="2024-05-01"
                data-month="2024-05"
                data-outside="true"
              >
                1
              </td>
              <td
                aria-label="Thursday, May 2nd, 2024"
                class="h-9 w-9 text-center flex items-center justify-center text-sm p-0 relative focus-within:relative focus-within:z-20 opacity-50"
                data-day="2024-05-02"
                data-month="2024-05"
                data-outside="true"
              >
                2
              </td>
              <td
                aria-label="Friday, May 3rd, 2024"
                class="h-9 w-9 text-center flex items-center justify-center text-sm p-0 relative focus-within:relative focus-within:z-20 opacity-50"
                data-day="2024-05-03"
                data-month="2024-05"
                data-outside="true"
              >
                3
              </td>
              <td
                aria-label="Saturday, May 4th, 2024"
                class="h-9 w-9 text-center flex items-center justify-center text-sm p-0 relative focus-within:relative focus-within:z-20 opacity-50"
                data-day="2024-05-04"
                data-month="2024-05"
                data-outside="true"
              >
                4
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Calendar > shows April, 2024 calendar 1`] = `
<DocumentFragment>
  <div
    class="rdp-root p-3"
  >
    <div
      class="flex flex-col sm:flex-row space-y-4 sm:space-y-0 relative"
    >
      <nav
        aria-label=""
        class="absolute flex gap-2 items-center rtl:left-0 rtl:right-auto right-0 z-10"
      >
        <button
          aria-label="Go to the Previous Month"
          class="btn btn-outline min-h-fit border-neutral-content h-7 w-7 bg-transparent p-0 opacity-50 hover:opacity-100 [&:disabled]:text-opacity-50"
          type="button"
        >
          <svg
            class="lucide lucide-chevron-left h-4 w-4 rdp-chevron"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m15 18-6-6 6-6"
            />
          </svg>
        </button>
        <button
          aria-label="Go to the Next Month"
          class="btn btn-outline min-h-fit border-neutral-content h-7 w-7 bg-transparent p-0 opacity-50 hover:opacity-100 [&:disabled]:text-opacity-50"
          type="button"
        >
          <svg
            class="lucide lucide-chevron-right h-4 w-4 rdp-chevron"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m9 18 6-6-6-6"
            />
          </svg>
        </button>
      </nav>
      <div
        class="space-y-4"
      >
        <div
          class="flex justify-start pt-1 relative items-center"
        >
          <span
            aria-live="polite"
            class="text-sm font-medium"
            role="status"
          >
            April 2024
          </span>
        </div>
        <table
          aria-label="April 2024"
          aria-multiselectable="false"
          class="w-full border-collapse space-y-1"
          role="grid"
        >
          <thead>
            <tr
              class="flex"
            >
              <th
                aria-label="Sunday"
                class="rounded-md w-9 font-normal text-[0.8rem]"
                scope="col"
              >
                Su
              </th>
              <th
                aria-label="Monday"
                class="rounded-md w-9 font-normal text-[0.8rem]"
                scope="col"
              >
                Mo
              </th>
              <th
                aria-label="Tuesday"
                class="rounded-md w-9 font-normal text-[0.8rem]"
                scope="col"
              >
                Tu
              </th>
              <th
                aria-label="Wednesday"
                class="rounded-md w-9 font-normal text-[0.8rem]"
                scope="col"
              >
                We
              </th>
              <th
                aria-label="Thursday"
                class="rounded-md w-9 font-normal text-[0.8rem]"
                scope="col"
              >
                Th
              </th>
              <th
                aria-label="Friday"
                class="rounded-md w-9 font-normal text-[0.8rem]"
                scope="col"
              >
                Fr
              </th>
              <th
                aria-label="Saturday"
                class="rounded-md w-9 font-normal text-[0.8rem]"
                scope="col"
              >
                Sa
              </th>
            </tr>
          </thead>
          <tbody
            class="rdp-weeks"
          >
            <tr
              class="flex w-full mt-2"
            >
              <td
                aria-label="Sunday, March 31st, 2024"
                class="h-9 w-9 text-center flex items-center justify-center text-sm p-0 relative focus-within:relative focus-within:z-20 opacity-50"
                data-day="2024-03-31"
                data-month="2024-03"
                data-outside="true"
              >
                31
              </td>
              <td
                aria-label="Monday, April 1st, 2024"
                class="h-9 w-9 text-center flex items-center justify-center text-sm p-0 relative focus-within:relative focus-within:z-20"
                data-day="2024-04-01"
              >
                1
              </td>
              <td
                aria-label="Tuesday, April 2nd, 2024"
                class="h-9 w-9 text-center flex items-center justify-center text-sm p-0 relative focus-within:relative focus-within:z-20"
                data-day="2024-04-02"
              >
                2
              </td>
              <td
                aria-label="Wednesday, April 3rd, 2024"
                class="h-9 w-9 text-center flex items-center justify-center text-sm p-0 relative focus-within:relative focus-within:z-20"
                data-day="2024-04-03"
              >
                3
              </td>
              <td
                aria-label="Thursday, April 4th, 2024"
                class="h-9 w-9 text-center flex items-center justify-center text-sm p-0 relative focus-within:relative focus-within:z-20"
                data-day="2024-04-04"
              >
                4
              </td>
              <td
                aria-label="Friday, April 5th, 2024"
                class="h-9 w-9 text-center flex items-center justify-center text-sm p-0 relative focus-within:relative focus-within:z-20"
                data-day="2024-04-05"
              >
                5
              </td>
              <td
                aria-label="Saturday, April 6th, 2024"
                class="h-9 w-9 text-center flex items-center justify-center text-sm p-0 relative focus-within:relative focus-within:z-20"
                data-day="2024-04-06"
              >
                6
              </td>
            </tr>
            <tr
              class="flex w-full mt-2"
            >
              <td
                aria-label="Sunday, April 7th, 2024"
                class="h-9 w-9 text-center flex items-center justify-center text-sm p-0 relative focus-within:relative focus-within:z-20"
                data-day="2024-04-07"
              >
                7
              </td>
              <td
                aria-label="Monday, April 8th, 2024"
                class="h-9 w-9 text-center flex items-center justify-center text-sm p-0 relative focus-within:relative focus-within:z-20"
                data-day="2024-04-08"
              >
                8
              </td>
              <td
                aria-label="Tuesday, April 9th, 2024"
                class="h-9 w-9 text-center flex items-center justify-center text-sm p-0 relative focus-within:relative focus-within:z-20"
                data-day="2024-04-09"
              >
                9
              </td>
              <td
                aria-label="Wednesday, April 10th, 2024"
                class="h-9 w-9 text-center flex items-center justify-center text-sm p-0 relative focus-within:relative focus-within:z-20"
                data-day="2024-04-10"
              >
                10
              </td>
              <td
                aria-label="Thursday, April 11th, 2024"
                class="h-9 w-9 text-center flex items-center justify-center text-sm p-0 relative focus-within:relative focus-within:z-20"
                data-day="2024-04-11"
              >
                11
              </td>
              <td
                aria-label="Friday, April 12th, 2024"
                class="h-9 w-9 text-center flex items-center justify-center text-sm p-0 relative focus-within:relative focus-within:z-20"
                data-day="2024-04-12"
              >
                12
              </td>
              <td
                aria-label="Saturday, April 13th, 2024"
                class="h-9 w-9 text-center flex items-center justify-center text-sm p-0 relative focus-within:relative focus-within:z-20"
                data-day="2024-04-13"
              >
                13
              </td>
            </tr>
            <tr
              class="flex w-full mt-2"
            >
              <td
                aria-label="Sunday, April 14th, 2024"
                class="h-9 w-9 text-center flex items-center justify-center text-sm p-0 relative focus-within:relative focus-within:z-20"
                data-day="2024-04-14"
              >
                14
              </td>
              <td
                aria-label="Monday, April 15th, 2024"
                class="h-9 w-9 text-center flex items-center justify-center text-sm p-0 relative focus-within:relative focus-within:z-20"
                data-day="2024-04-15"
              >
                15
              </td>
              <td
                aria-label="Tuesday, April 16th, 2024"
                class="h-9 w-9 text-center flex items-center justify-center text-sm p-0 relative focus-within:relative focus-within:z-20"
                data-day="2024-04-16"
              >
                16
              </td>
              <td
                aria-label="Wednesday, April 17th, 2024"
                class="h-9 w-9 text-center flex items-center justify-center text-sm p-0 relative focus-within:relative focus-within:z-20"
                data-day="2024-04-17"
              >
                17
              </td>
              <td
                aria-label="Thursday, April 18th, 2024"
                class="h-9 w-9 text-center flex items-center justify-center text-sm p-0 relative focus-within:relative focus-within:z-20"
                data-day="2024-04-18"
              >
                18
              </td>
              <td
                aria-label="Today, Friday, April 19th, 2024"
                class="h-9 w-9 text-center flex items-center justify-center text-sm p-0 relative focus-within:relative focus-within:z-20 group/today [&:has(*)]:ring-0 ring-1 ring-accent ring-inset rounded-full"
                data-day="2024-04-19"
                data-today="true"
              >
                19
              </td>
              <td
                aria-label="Saturday, April 20th, 2024"
                class="h-9 w-9 text-center flex items-center justify-center text-sm p-0 relative focus-within:relative focus-within:z-20"
                data-day="2024-04-20"
              >
                20
              </td>
            </tr>
            <tr
              class="flex w-full mt-2"
            >
              <td
                aria-label="Sunday, April 21st, 2024"
                class="h-9 w-9 text-center flex items-center justify-center text-sm p-0 relative focus-within:relative focus-within:z-20"
                data-day="2024-04-21"
              >
                21
              </td>
              <td
                aria-label="Monday, April 22nd, 2024"
                class="h-9 w-9 text-center flex items-center justify-center text-sm p-0 relative focus-within:relative focus-within:z-20"
                data-day="2024-04-22"
              >
                22
              </td>
              <td
                aria-label="Tuesday, April 23rd, 2024"
                class="h-9 w-9 text-center flex items-center justify-center text-sm p-0 relative focus-within:relative focus-within:z-20"
                data-day="2024-04-23"
              >
                23
              </td>
              <td
                aria-label="Wednesday, April 24th, 2024"
                class="h-9 w-9 text-center flex items-center justify-center text-sm p-0 relative focus-within:relative focus-within:z-20"
                data-day="2024-04-24"
              >
                24
              </td>
              <td
                aria-label="Thursday, April 25th, 2024"
                class="h-9 w-9 text-center flex items-center justify-center text-sm p-0 relative focus-within:relative focus-within:z-20"
                data-day="2024-04-25"
              >
                25
              </td>
              <td
                aria-label="Friday, April 26th, 2024"
                class="h-9 w-9 text-center flex items-center justify-center text-sm p-0 relative focus-within:relative focus-within:z-20"
                data-day="2024-04-26"
              >
                26
              </td>
              <td
                aria-label="Saturday, April 27th, 2024"
                class="h-9 w-9 text-center flex items-center justify-center text-sm p-0 relative focus-within:relative focus-within:z-20"
                data-day="2024-04-27"
              >
                27
              </td>
            </tr>
            <tr
              class="flex w-full mt-2"
            >
              <td
                aria-label="Sunday, April 28th, 2024"
                class="h-9 w-9 text-center flex items-center justify-center text-sm p-0 relative focus-within:relative focus-within:z-20"
                data-day="2024-04-28"
              >
                28
              </td>
              <td
                aria-label="Monday, April 29th, 2024"
                class="h-9 w-9 text-center flex items-center justify-center text-sm p-0 relative focus-within:relative focus-within:z-20"
                data-day="2024-04-29"
              >
                29
              </td>
              <td
                aria-label="Tuesday, April 30th, 2024"
                class="h-9 w-9 text-center flex items-center justify-center text-sm p-0 relative focus-within:relative focus-within:z-20"
                data-day="2024-04-30"
              >
                30
              </td>
              <td
                aria-label="Wednesday, May 1st, 2024"
                class="h-9 w-9 text-center flex items-center justify-center text-sm p-0 relative focus-within:relative focus-within:z-20 opacity-50"
                data-day="2024-05-01"
                data-month="2024-05"
                data-outside="true"
              >
                1
              </td>
              <td
                aria-label="Thursday, May 2nd, 2024"
                class="h-9 w-9 text-center flex items-center justify-center text-sm p-0 relative focus-within:relative focus-within:z-20 opacity-50"
                data-day="2024-05-02"
                data-month="2024-05"
                data-outside="true"
              >
                2
              </td>
              <td
                aria-label="Friday, May 3rd, 2024"
                class="h-9 w-9 text-center flex items-center justify-center text-sm p-0 relative focus-within:relative focus-within:z-20 opacity-50"
                data-day="2024-05-03"
                data-month="2024-05"
                data-outside="true"
              >
                3
              </td>
              <td
                aria-label="Saturday, May 4th, 2024"
                class="h-9 w-9 text-center flex items-center justify-center text-sm p-0 relative focus-within:relative focus-within:z-20 opacity-50"
                data-day="2024-05-04"
                data-month="2024-05"
                data-outside="true"
              >
                4
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
